--- a/Layouts/Layout 1.xml
+++ b/Layouts/Layout 1.xml
@@ -588,6 +588,7 @@
                     <instance-variables>
                         <wallHoldTimer>0</wallHoldTimer>
                         <wallRun>0</wallRun>
+                        <standUp>0</standUp>
                     </instance-variables>
                     <behavior-instances>
                         <behavior-instance type="Platform">
@@ -616,6 +617,7 @@
                                 <tag></tag>
                             </properties>
                         </behavior-instance>
+                        <behavior-instance type="Timer" />
                     </behavior-instances>
                     <blend-mode>0</blend-mode>
                     <effect-fallback>0</effect-fallback>
@@ -623,7 +625,7 @@
                         <x>64</x>
                         <y>256</y>
                         <z>0</z>
-                        <width>28</width>
+                        <width>20</width>
                         <height>40</height>
                         <depth>0</depth>
                         <hotspotX>0.5</hotspotX>
