--- a/Layouts/SlideTester.uistate.xml
+++ b/Layouts/SlideTester.uistate.xml
@@ -5,10 +5,10 @@ It is entirely optional and the project will load without it.  If you are placin
 you probably do not want to add any .uistate.xml files to the repository.-->
     <camera>
         <position-x>1300</position-x>
-        <position-y>1350.48</position-y>
-        <position-z>313.386</position-z>
+        <position-y>1522.91</position-y>
+        <position-z>194.588</position-z>
         <lookat-x>1300</lookat-x>
-        <lookat-y>1350.48</lookat-y>
+        <lookat-y>1522.91</lookat-y>
         <lookat-z>0</lookat-z>
     </camera>
     <snap-to-grid>1</snap-to-grid>
@@ -23,7 +23,7 @@ you probably do not want to add any .uistate.xml files to the repository.-->
         <property expanded="0" name="Margins" />
         <property expanded="1" name="Effects" />
     </properties>
-    <active-layer name="Level and animations" />
+    <active-layer name="Game" />
     <layers>
         <layer locked="1" name="Background" parallax-in-editor="0" visible="1" />
         <layer locked="0" name="Game" parallax-in-editor="0" visible="1" />
