--- a/Layouts/Level 2.uistate.xml
+++ b/Layouts/Level 2.uistate.xml
@@ -23,11 +23,11 @@ you probably do not want to add any .uistate.xml files to the repository.-->
         <property expanded="0" name="Margins" />
         <property expanded="1" name="Effects" />
     </properties>
-    <active-layer name="DecorBack" />
+    <active-layer name="Game" />
     <layers>
-        <layer locked="1" name="Background" parallax-in-editor="1" visible="1" />
-        <layer locked="0" name="DecorBack" parallax-in-editor="1" visible="1" />
+        <layer locked="1" name="Background" parallax-in-editor="1" visible="0" />
+        <layer locked="0" name="DecorBack" parallax-in-editor="1" visible="0" />
         <layer locked="0" name="DecorFront" parallax-in-editor="0" visible="0" />
-        <layer locked="0" name="Game" parallax-in-editor="0" visible="0" />
+        <layer locked="0" name="Game" parallax-in-editor="0" visible="1" />
     </layers>
 </c2uistate>
