--- a/Layouts/MainMenu.xml
+++ b/Layouts/MainMenu.xml
@@ -38,14 +38,12 @@
                     </properties>
                     <instance-variables>
                         <Anchored>0</Anchored>
-                        <xOffset>0</xOffset>
-                        <yOffset>0</yOffset>
                         <EndX>0</EndX>
                         <EndY>0</EndY>
                         <theta>0</theta>
                         <l>0</l>
                         <theta0>0</theta0>
-                        <t>0</t>
+                        <Mirrored>0</Mirrored>
                     </instance-variables>
                     <blend-mode>0</blend-mode>
                     <effect-fallback>0</effect-fallback>
