--- a/Layouts/Level 2.xml
+++ b/Layouts/Level 2.xml
@@ -2,7 +2,7 @@
 <c2layout>
     <name>Level 2</name>
     <sid>7636272356657246</sid>
-    <event-sheet>Level 2 sheet</event-sheet>
+    <event-sheet></event-sheet>
     <size>
         <width>3064</width>
         <height>1440</height>
