--- a/Layouts/SlideTester.xml
+++ b/Layouts/SlideTester.xml
@@ -2,7 +2,7 @@
 <c2layout>
     <name>SlideTester</name>
     <sid>3947301898871559</sid>
-    <event-sheet>SlideTester sheet</event-sheet>
+    <event-sheet></event-sheet>
     <size>
         <width>2600</width>
         <height>2560</height>
@@ -76,11 +76,14 @@
                         <collisions>Enabled</collisions>
                     </properties>
                     <instance-variables>
+                        <WallHoldTimer>0</WallHoldTimer>
                         <WallJumpHoriz>300</WallJumpHoriz>
-                        <WallJumpVert>400</WallJumpVert>
+                        <WallJumpVert>0</WallJumpVert>
                         <Anchored>0</Anchored>
-                        <MinLine>100</MinLine>
+                        <MinLine>0</MinLine>
                         <MaxLine>200</MaxLine>
+                        <StateBefore>Default</StateBefore>
+                        <WallHoldLimit>0</WallHoldLimit>
                     </instance-variables>
                     <behavior-instances>
                         <behavior-instance type="Platform">
@@ -100,13 +103,6 @@
                         <behavior-instance type="ScrollTo">
                             <properties>
                                 <initial-state>Disabled</initial-state>
-                            </properties>
-                        </behavior-instance>
-                        <behavior-instance type="ShadowCaster">
-                            <properties>
-                                <initial-state>Enabled</initial-state>
-                                <height>100</height>
-                                <tag></tag>
                             </properties>
                         </behavior-instance>
                         <behavior-instance type="Timer" />
